2013-04-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a PDF set usage example (uses C++11 for now, for fun!)

2013-04-11  Andy Buckley  <andy.buckley@cern.ch>

	* Rename of wrapper dir from cython -> python (reflect the target,
	not the way of achieving it).

	* Python extension build env fix

2013-04-10  Andy Buckley  <andy.buckley@cern.ch>

	* Improving creategrids to use xmin and qmin/max when dumping
	LHpdf files and to allow a manual override for LHgrid
	dumps. CTEQ6L1 looking *almost* publicly acceptable now.

	* examples/: Resurrecting old testpdf.cc as an example (used by Doxygen)

	* migration/: Using compatibility stuff to improve dumpv5v6.cc

	* Adding LHAPDF_MAJOR_VERSION macro and examples/compatibility.cc

	* AUTHORS list tweak since James added substantial code for Fortran compatibility.

	* Adding copyright etc. notices to each file header.

	* Adding LHAPDF.h convenience header.

2013-04-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fix ctypes handling in creategrids

	* Adding ignoring (and writing) of a 3rd grid block line, to
	specify "internal flavor" ID codes. Not actually parsed or
	used... yet.

	* Cleaning up LHAGlue compilation warnings

	* Config flag updates and clarifications, and adding API
	mechanisms for numMembers and LHAPDF ID lookup.

2013-04-08  Andy Buckley  <andy.buckley@cern.ch>

	* Further improved creategrid, comparison, and plotting
	scripts. Better high-xipol knots -> much better agreement. Nearly
	done.

2013-04-08  James Ferrando  <james.ferrando@cern.ch>

	* Fortran PDFLIB function mapping works now: good agreement with
	LHA5 via PYTHIA6.

2013-04-05  Andy Buckley  <andy.buckley@cern.ch>

	* migration/plotv5v6 improvements with line styles and labels.

	* Improved/fixed migration/creategrid which excludes grid points
	at x=0 (which screwed up handing over to extrapolation) and fixes
	numpy array manipulation. Low-x behaviour is now good, high-x
	needs some inspection: getting close to acceptable at last!
